[tool.poetry]
name = "whispertoy"
version = "0.1.0"
description = ""
authors = ["Krys Lawrence <krys@krys.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
whisper = {git = "https://github.com/openai/whisper.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
