[tool.poetry]
name = "whispertoy"
version = "0.1.0"
description = ""
authors = ["Krys Lawrence <krys@krys.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
whisper = {git = "https://github.com/openai/whisper.git"}
sounddevice = "^0.4.5"

[tool.poetry.group.whisper.dependencies]
# whisper's dependencies since poetry does not install them automatically.
numpy = "^1.23.4"
torch = "^1.13.0"
tqdm = "^4.64.1"
more-itertools = "^9.0.0"
transformers = "^4.19.0"
ffmpeg-python = "==0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
